first set of cleanup (thanks FindBugs)
git-svn-id: http://svn.code.sf.net/p/htmlunit/code/trunk/htmlunit@6085 5f5364db-9458-4db8-a492-e30667be6df6